syntax = "proto3";

package sbt.internal.inc;

///////////////////////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////// ZINC PROF ///////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////////////////////

message Profile {
    repeated ZincRun runs = 1;
    repeated string string_table = 2;
}

message ZincRun {
    InitialChanges initial = 1;
    repeated CycleInvalidation cycles = 3;
}

message CycleInvalidation {
    repeated int64 invalidated = 1;
    repeated int64 invalidatedByPackageObjects = 2;
    repeated int64 initialSources = 3;
    repeated int64 invalidatedSources = 4;
    repeated int64 recompiledClasses = 5;

    int64 startTimeNanos = 6; // Start time of compilation (UTC) as nanoseconds past the epoch
    int64 compilationDurationNanos = 7; // Duration of the compilation profile in nanoseconds
    repeated ApiChange changesAfterRecompilation = 8;

    repeated InvalidationEvent events = 9;
    repeated int64 nextInvalidations = 10;
    bool shouldCompileIncrementally = 11;
}

message InvalidationEvent {
    string kind = 1;
    repeated int64 inputs = 2;
    repeated int64 outputs = 3;
    string reason = 4;
}

message Changes {
    repeated int64 added = 1;
    repeated int64 removed = 2;
    repeated int64 modified = 3;
}

message ApiChange {
    int64 modifiedClass = 1;
    string reason = 2;
    repeated UsedName usedNames = 3; // Can be empty if the change is not related to names
}

message InitialChanges {
    Changes changes = 1;
    repeated int64 removedProducts = 2;
    repeated int64 binaryDependencies = 3;
    repeated ApiChange externalChanges = 4;
}

message UsedName {
    int64 name = 1;
    repeated Scope scopes = 2;
}

message Scope {
    int64 kind = 1;
}
